<resources>
    <string name="app_name">Quizzzy</string>

    <!-- Buttons -->
    <string name="quiz">Quizzzy!</string>
    <string name="show_history">Show history</string>
    <string name="about">About</string>

    <!-- Titles -->
    <string name="select_category">Select category</string>
    <string name="select_difficulty">Select difficulty level</string>
    <string name="about_title">About</string>
    <string name="selected_category">Selected category :</string>
    <string name="question">Question</string>

    <!-- About -->
    <string name="github">Github</string>
    <string name="polsl">Silesian University of Technology</string>
    <string name="rms">Faculty of Applied Mathematics</string>
    <string name="api">API</string>
    <string name="description">Application description</string>
    <string name="authors">Authors:</string>
    <string name="kamil">Kamil Donda</string>
    <string name="remigiusz">Remigiusz Drobinski</string>
    <string name="robert">Robert Kwoll</string>
    <string name="ApiDesc">The Open Trivia Database is a free, user contributed trivia database. The Open Trivia Database API offers a specified number of trivia questions via category, difficulty, type and encoding.</string>
    <string name="AppDesc">The Quizzzy application will allow you to verify your knowledge in many areas. Each test contains 10 questions and each question contains 4 answers, however only one is correct. Have fun and develop your knowledge!</string>

    <!-- Other -->
    <string name="load">Quiz download in progress…</string>
    <string name="history">Previous Quizzzes</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="all">All</string>
    <string name="no_internet">Error! Please, check your internet connection!</string>
    <string name="no_diff">Error! There are no quizzes with this difficulty level for the selected category. Downloading all difficulty levels … </string>

    <!-- Result -->
    <string name="your_result">Your result :</string>
    <string name="try_again">Try again !</string>
    <string name="science_amp_nature"><![CDATA[Science & Nature]]></string>

</resources>